Mybatis Config를 application.yaml을 통해서 설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,8 +8,9 @@ spring:
     password: ${MYSQL_PASSWORD:12345678}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-#mybatis:
-#  type-aliases-package: com.why.that.dao
-#  mapper-locations: classpath:/mybatis/mapper/**/*.xml
-#  configuration:
-#    cacheEnabled: false
+mybatis:
+  mapper-locations: classpath:/mybatis/mapper/**/*.xml
+  configuration:
+    cacheEnabled: true   # ?? ???, ??? ????
+    lazy-initialization: false   # Mapper ? ??? ??, true ??? ? ???? ??? ??? ? ??? ???? ???? ??? ??? ??? ? ??.
+    type-aliases-package: com.why.that.dao
